refactor: Extract moderation to wrapper handler pattern
- Create ModerationOperationHandler as a decorator/wrapper for operation handlers
- Remove moderation code from PutOperationHandler, PatchOperationHandler, and PostOperationHandler
- Add operation-handler-moderation.json config to enable moderation via Components.js
- Moderation now optional and non-invasive to core handlers

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 # Moderation config files (use .example templates)
 /config/moderation-enabled.json
 /config/moderation-settings.json
+moderation.log
